// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a blank banner wrapper 1`] = `
<BackgroundTile
  isDeceased={false}
>
  <SelectableTile
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
  >
    <InjectIntl(DemographicsBanner)
      applicationContent={null}
      className="selectable-demographics-banner"
      deceasedDate={null}
      gestationalAge={null}
      identifiers={Object {}}
      postMenstrualAge={null}
      preferredFirstName={null}
    />
  </SelectableTile>
  <div
    className="divider"
  />
  <button
    className="info-button"
    onClick={[MockFunction]}
    role="link"
    type="button"
  >
    Terra.demographicsBanner.info
    <IconInformation
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  </button>
</BackgroundTile>
`;

exports[`renders the banner wrapper with all props 1`] = `
<BackgroundTile
  applicationRows={
    Array [
      Object {
        "Address": "1501 Walnut St. Apt #123",
        "City": "Kansas City MO",
      },
      Object {
        "ZIP": 64108,
      },
    ]
  }
  isDeceased={false}
>
  <SelectableTile
    id="selectableDemographics"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
  >
    <InjectIntl(DemographicsBanner)
      age="25 Years"
      applicationContent={
        <span
          className="risk-score"
        >
          5%
        </span>
      }
      className="selectable-demographics-banner"
      dateOfBirth="May 9, 1993"
      deceasedDate={null}
      gender="Male"
      gestationalAge="April 5, 2016"
      identifiers={
        Object {
          "MRN": 12343,
          "REA": "3JSDA",
        }
      }
      personName="Johnathon Doe"
      photo=""
      postMenstrualAge="April 7, 2016"
      preferredFirstName="John"
    />
  </SelectableTile>
  <div
    className="divider"
  />
  <button
    className="info-button"
    id="infoButton"
    onClick={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    role="link"
    type="button"
  >
    Terra.demographicsBanner.info
    <IconInformation
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  </button>
</BackgroundTile>
`;
